--- a/src/app/ui/dashboard/dashboard.module.css
+++ b/src/app/ui/dashboard/dashboard.module.css
@@ -7,6 +7,8 @@
   background-color: var(--bgSoft);
   padding: 20px;
   min-height: 100vh;
+  transition: all 0.8s ease-in-out;
+  -webkit-transition: all 0.8s ease-in-out;
 }
 
 .menuOpen {
