--- a/src/app/ui/dashboard/dashboard.module.css
+++ b/src/app/ui/dashboard/dashboard.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  padding-top: 20px;
 }
 
 .menu {
@@ -9,6 +10,7 @@
   min-height: 100vh;
   transition: all 0.8s ease-in-out;
   -webkit-transition: all 0.8s ease-in-out;
+  border-radius: 10px;
 }
 
 .menuOpen {
@@ -37,13 +39,13 @@
 
 .content {
   flex: 4;
-  padding: 20px;
+  padding: 0px 20px 20px 20px;
 }
 
 .wrapper {
   display: flex;
   gap: 20px;
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
 .main {
